implement eye detection but very laggy

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div id="entire-screen">
       <div id="live-view"></div>
       <video id="webcam" autoplay width="640px" height="480px"></video>
+      <div id="canva"></div>
     </div>
     
     
