added graphic interface

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-detection"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-landmarks-detection"></script>
+
+    <!-- import google font: unbounded -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded&display=swap" rel="stylesheet">
     
     <title>Sneak Peek Game</title>
     <!-- stylesheet -->
@@ -35,5 +40,6 @@
   </body>
 
   <!-- javascript file -->
+  <script src="detector.js"></script>
   <script src="script.js"></script>
 </html>
