--- a/index.html
+++ b/index.html
@@ -57,11 +57,24 @@
         </p>
       <img src="assets/close.png" id="close">
     </div>
+
+    <div id="result">
+      <p id="result-line-one"></p>
+      <p id="result-line-two"></p>
+      <div id="new-game-button">
+        <p id="new-game-text">NEW GAME</p>
+      </div>
+    </div>
+
+    <div id="blue-backdrop"></div>
+    <div id="start">
+      <p id="start-content">You have 3 seconds to close your eyes before the game start!</p>
+    </div>
     
   </body>
 
   <!-- javascript file -->
+  <script src="ui.js"></script>
   <script src="detector.js"></script>
   <script src="script.js"></script>
-  <script src="ui.js"></script>
 </html>
